Bug 556786 - Filter junk status "Not Junk" won't save, r/sr=standard8